Adding test structure for mcu

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="align-items-center justify-content-center mt-4">
+<!-- <div class="align-items-center justify-content-center mt-4">
     <h3 class="text-center mt-4">Login</h3>
     <div *ngIf="errorMessage" class="alert alert-danger form-text text-center">
         {{errorMessage}}
@@ -44,4 +44,4 @@
             </div>
         </form>
     </div>
-</div>
+</div> -->
